--- a/composer.json
+++ b/composer.json
@@ -5,22 +5,22 @@
         {
             "name": "Malaine Mariem",
             "email": "mariem98malaine@gmail.com"
+        },
+        {
+            "name": "Moutih Marouane",
+            "email": "m.moutih@gmail.com"
         }
     ],
     "autoload": {
         "psr-4": {
             "App\\" :"app"
-        },
-        "files": [
-            "app/flowers.php"
-        ]
+        }
     },
-
-
-
-
     "require-dev": {
         "phpunit/phpunit": "^9.5"
+    },
+    "scripts": {
+        "start": "php -S localhost:8000 -t public/",
+        "test": "phpunit"
     }
- 
 }
